Update README (use markdown syntax) Fix "namespace" of clearbricks in composer

--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "clearbricks/clearbricks",
+    "name": "dotclear/clearbricks",
     "description": "Clearbricks is not yet another framework.",
     "license": "GPL-V2",
     "authors": [
