--- a/.editorconfig
+++ b/.editorconfig
@@ -7,6 +7,7 @@
 #
 # 1. Franck: creation (2017-12-04)
 # 2. Franck: PSR-2 for PHP, add specific extension settings (2018-01-19)
+# 3. Franck: switch to 2 spaces by default, only *.php and *.md use 4 spaces (2018-01-24)
 
 # top-most EditorConfig file
 root = true
@@ -16,25 +17,17 @@ root = true
 end_of_line = lf
 insert_final_newline = true
 charset = utf-8
-indent_style = tab
-indent_size = 4
+indent_style = space
+indent_size = 2
 trim_trailing_whitespace = true
 
-# PHP
-[*.php,*.tpl]
-indent_style = space
-indent_size = 4
-
-# Javascript/JSon
-[*.js,*.json]
+# PHP - PSR-2
+[*.php]
 indent_style = space
 indent_size = 4
 
 # Markdown
 [*.md]
-trim_trailing_whitespace = false
-
-# XML
-[*.xml]
 indent_style = space
-indent_size = 2
+indent_size = 4
+trim_trailing_whitespace = false
