--- a/.doxygen.conf
+++ b/.doxygen.conf
@@ -122,6 +122,7 @@ EXCLUDE_SYMLINKS       = NO
 EXCLUDE_PATTERNS       = */bin/* \
                          */coverage/* \
                          */debian/* \
+                         */ext/* \
                          */tests/* \
                          */vendor/* \
                          */.atoum.php \
