--- a/.doxygen.conf
+++ b/.doxygen.conf
@@ -38,7 +38,8 @@ INHERIT_DOCS           = YES
 SEPARATE_MEMBER_PAGES  = NO
 TAB_SIZE               = 4
 ALIASES                = "uses=Uses @link\n"
-ALIASES                += "subpackage=@category"
+ALIASES                += "subpackage=@addtogroup"
+ALIASES                += "ignore=@internal"
 TCL_SUBST              =
 OPTIMIZE_OUTPUT_FOR_C  = YES
 OPTIMIZE_OUTPUT_JAVA   = NO
