--- a/.doxygen.conf
+++ b/.doxygen.conf
@@ -37,9 +37,8 @@ MULTILINE_CPP_IS_BRIEF = NO
 INHERIT_DOCS           = YES
 SEPARATE_MEMBER_PAGES  = NO
 TAB_SIZE               = 4
-ALIASES                = "uses=Uses @link\n"
-ALIASES                += "subpackage=@addtogroup"
-ALIASES                += "ignore=@internal"
+ALIASES                = "uses=Uses "
+ALIASES                += "subpackage=@ingroup"
 TCL_SUBST              =
 OPTIMIZE_OUTPUT_FOR_C  = YES
 OPTIMIZE_OUTPUT_JAVA   = NO
