--- a/composer.json
+++ b/composer.json
@@ -21,6 +21,8 @@
         "bin-dir": "bin/"
     },
     "autoload": {
-        "psr-0": { "": "" }
+        "psr-0": {
+            "": ""
+        }
     }
 }
