--- a/.php_cs.dist
+++ b/.php_cs.dist
@@ -53,7 +53,7 @@ return PhpCsFixer\Config::create()
         'phpdoc_trim' => true,
         'return_type_declaration' => ['space_before' => 'none'],
         'single_quote' => true,
-        'ternary_to_null_coalescing' => true,
+        'ternary_to_null_coalescing' => false,  // waiting for PHP 7+, then set back to true
         'trailing_comma_in_multiline_array' => false,
         'trim_array_spaces' => true,
     ])
