--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,8 @@
   "require-dev": {
     "atoum/atoum": "dev-master",
     "fzaninotto/faker": "dev-master",
-    "atoum/reports-extension": "dev-master"
+    "atoum/reports-extension": "dev-master",
+    "phpstan/phpstan": "0.12.x-dev"
   },
   "config": {
     "bin-dir": "bin/"
