--- a/.doxygen.conf
+++ b/.doxygen.conf
@@ -5,7 +5,7 @@
 #---------------------------------------------------------------------------
 DOXYFILE_ENCODING      = UTF-8
 PROJECT_NAME           = Clearbricks
-PROJECT_NUMBER         =
+PROJECT_NUMBER         = 1.2
 PROJECT_BRIEF          =
 PROJECT_LOGO           =
 OUTPUT_DIRECTORY       = .
