--- a/composer.json
+++ b/composer.json
@@ -10,13 +10,13 @@
   ],
   "minimum-stability": "dev",
   "require": {
-    "php": ">=7.3.0"
+    "php": ">=7.4.0"
   },
   "require-dev": {
     "atoum/atoum": "dev-master",
     "fzaninotto/faker": "dev-master",
     "atoum/reports-extension": "dev-master",
-    "phpstan/phpstan": "0.12.x-dev"
+    "phpstan/phpstan": "^1.1"
   },
   "config": {
     "bin-dir": "bin/"
