Remove l10n deprecated method (getTextDirection) Avoid parsing .php-cs-fixer.dist.php in doxygen doc

--- a/.doxygen.conf
+++ b/.doxygen.conf
@@ -127,7 +127,8 @@ EXCLUDE_PATTERNS       = */bin/* \
                          */tests/* \
                          */vendor/* \
                          */.atoum.php \
-                         */.atoum.coverage.php
+                         */.atoum.coverage.php \
+                         */.php-cs-fixer.dist.php
 EXCLUDE_SYMBOLS        =
 EXAMPLE_PATH           =
 EXAMPLE_PATTERNS       = *
