--- a/.doxygen.conf
+++ b/.doxygen.conf
@@ -5,7 +5,7 @@
 #---------------------------------------------------------------------------
 DOXYFILE_ENCODING      = UTF-8
 PROJECT_NAME           = Clearbricks
-PROJECT_NUMBER         = 1.3
+PROJECT_NUMBER         = 1.4
 PROJECT_BRIEF          =
 PROJECT_LOGO           =
 OUTPUT_DIRECTORY       = .
@@ -122,8 +122,7 @@ EXCLUDE                =
 EXCLUDE_SYMLINKS       = YES
 EXCLUDE_PATTERNS       = */bin/* \
                          */coverage/* \
-                         */debian/* \
-                         */ext/* \
+                         */doxygen/* \
                          */tests/* \
                          */vendor/* \
                          */.atoum.php \
